:rocket: Added new topics about explore python review

--- a/01-Exercices/01-Python-Review/1_2_Ferramentas_Python_Para_Manipulação_e_visualização_de_dados_(Numpy,_Matplotlib_e_Pandas).ipynb
+++ b/01-Exercices/01-Python-Review/1_2_Ferramentas_Python_Para_Manipulação_e_visualização_de_dados_(Numpy,_Matplotlib_e_Pandas).ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/aSTRonuun/ml2023/blob/master/Lista1_1_Ferramentas_Python_Para_Manipula%C3%A7%C3%A3o_e_visualiza%C3%A7%C3%A3o_de_dados_(Numpy%2C_Matplotlib_e_Pandas).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "YQxa0s6XDSYm"
       },
       "source": [
@@ -1588,7 +1578,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Data frame is a pandas function that initializes an array of given dimension passed by parameter and supports various data visibility operations"
+      ],
       "metadata": {
         "id": "3Q7Rci6jhC5d"
       }
@@ -1665,6 +1657,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Supports toString()\n"
+      ],
+      "metadata": {
+        "id": "aHSsRJA4kvl1"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -1685,6 +1686,15 @@
       "source": [
         "print(df)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Supports latex"
+      ],
+      "metadata": {
+        "id": "0xiILXPMk1IK"
+      }
     },
     {
       "cell_type": "code",
@@ -1713,6 +1723,15 @@
       "source": [
         "print(df.to_latex())"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Is possible adicionar another column or array in the matriz"
+      ],
+      "metadata": {
+        "id": "idgyuLUnlKrU"
+      }
     },
     {
       "cell_type": "code",
@@ -1785,6 +1804,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Column plot is supported "
+      ],
+      "metadata": {
+        "id": "z8IGvVzhlTB5"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -1808,6 +1836,15 @@
       "source": [
         "df.plot(kind='bar', grid=True, title='Título');"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Matrix transpose is supported"
+      ],
+      "metadata": {
+        "id": "bqY4TezNluIj"
+      }
     },
     {
       "cell_type": "code",
@@ -1886,6 +1923,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Tranposed matrix plot"
+      ],
+      "metadata": {
+        "id": "2fW0fciLm3Gv"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -1909,6 +1955,15 @@
       "source": [
         "df2.plot(kind='bar', grid=True);"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The sort_values function sorts dataframe rows based on one or more columns specfied by the by parameter, in this case it is possível to see that table was sorted by the highst values of C4"
+      ],
+      "metadata": {
+        "id": "21ajrsvBp59c"
+      }
     },
     {
       "cell_type": "code",
@@ -2068,8 +2123,7 @@
       "version": "3.6.8"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
