update table drop

--- a/02-Stelar-Classification-Project/Stelar-Classification-Project.ipynb
+++ b/02-Stelar-Classification-Project/Stelar-Classification-Project.ipynb
@@ -940,7 +940,7 @@
    "execution_count": 10,
    "outputs": [],
    "source": [
-    "df.drop(['obj_ID', 'rerun_ID', 'run_ID', 'field_ID', 'spec_obj_ID', 'fiber_ID', 'r', 'i'], axis=1, inplace=True)"
+    "df.drop(['obj_ID', 'rerun_ID', 'run_ID', 'field_ID', 'spec_obj_ID', 'fiber_ID', 'r', 'i', 'MDJ'], axis=1, inplace=True)"
    ],
    "metadata": {
     "collapsed": false
