update notebook description - about

--- a/02-Stelar-Classification-Project/Stelar-Classification-Project.ipynb
+++ b/02-Stelar-Classification-Project/Stelar-Classification-Project.ipynb
@@ -103,6 +103,7 @@
     "\n",
     "- KNN (K-Nearest Neighbors)\n",
     "- Decision Tree\n",
+    "- Random Forest\n",
     "- Deep Learning (Neural Networks)"
    ],
    "metadata": {
