update notebook description - next steps

--- a/02-Stelar-Classification-Project/Stelar-Classification-Project.ipynb
+++ b/02-Stelar-Classification-Project/Stelar-Classification-Project.ipynb
@@ -1813,6 +1813,8 @@
    "source": [
     "- Use the knowleadge of the feature importance to remove the less important features and retrain the model.\n",
     "- Use a Neural Network to train the model.\n",
+    "- Use a Random Forest to train the model.\n",
+    "- Balance the dataset.\n",
     "- Improve notebook organization."
    ],
    "metadata": {
